--- a/landing/templates/index.html
+++ b/landing/templates/index.html
@@ -35,7 +35,7 @@
     <div class="navbar navbar-fixed-top">
       <div class="container">
         <span class="navbar-brand">
-          <img src="{% static 'images/econvenor-logo-v1l.png' %}" width="200" height="45" alt="eConvenor logo">
+          <img src="{% static 'images/econvenor-logo-v1l.png' %}" width="200" height="45" alt="An image of the eConvenor logo">
         </span>
         <div class="pull-right">
           <a href={% url 'login' %}><button type="submit" class="btn btn-default">Sign in</button></a>
@@ -349,7 +349,7 @@
     <div class="section" id="footer">
       <div class="container">
         <p class="text-center">
-          <img src="{% static 'images/email-address-v1.png' %}">
+          <img src="{% static 'images/email-address-v1.png' %}" alt="This is an image of our email address. You can email us at 'mail' at this domain.>
         </p>
       </div>
     </div>
