--- a/econvenor/templates/error_base.html
+++ b/econvenor/templates/error_base.html
@@ -45,7 +45,7 @@
       <div class="container">
         <span class="navbar-brand">
           <a href="{% url 'index' %}">
-            <img src="{% static 'images/econvenor-logo-v1l.png' %}" width="200" height="45" alt="eConvenor logo">
+            <img src="{% static 'images/econvenor-logo-v1l.png' %}" width="200" height="45" alt="An image of the eConvenor logo">
           </a>
         </span>
       </div>
