Improved wording of bug report form

--- a/bugs/templates/bug_report.html
+++ b/bugs/templates/bug_report.html
@@ -29,15 +29,15 @@
       		{{ bug_form.location|setclass:"form-control" }}
       	</div>
       	<div class="form-group">
-			<label>What action triggered the bug?</label>
+			<label>What steps will reproduce the problem?</label>
       		{{ bug_form.trigger|setclass:"form-control" }}
       	</div>
       	<div class="form-group">
-			<label>What task were you trying to accomplish?</label>
+			<label>What was the expected result?</label>
       		{{ bug_form.goal|setclass:"form-control" }}
       	</div>
       	<div class="form-group">
-			<label>What did the the bug display on the screen?</label>
+			<label>What happened instead?</label>
       		{{ bug_form.behaviour|setclass:"form-control" }}
       	</div>
       
