--- a/docs/templates/minutes_edit.html
+++ b/docs/templates/minutes_edit.html
@@ -1,4 +1,5 @@
 {% extends "app_base.html" %}
+
 {% load setclass %}
 
 {% block content %}
@@ -14,78 +15,35 @@
  
 <h1><small>Meeting details</small></h1>
 
-	{% ifequal editable_section 'is_meeting_details' %}
-		<div class="row">
-  		<div class="col-md-6">
-		<div class="well">
-			<form action="" method="POST">
-				{% csrf_token %}
-				
-				{% for hidden in existing_data_forms.hidden_fields %}
-   					<div class="form-group">
-   						{{ hidden }}
-   					</div>
-				{% endfor %}	
 
-    			{% for field in existing_data_forms.visible_fields %}
-					<div>
-			   			{{ field.label_tag }}
-			   			{% ifequal field.label "Date" %}
-      						<br>
-      						{{ field }}
-      					{% else %}
-	      					{{ field|setclass:"form-control" }}
-	      				{% endifequal %}
-					</div>
-					<br>
-				{% endfor %}
-   			 	<button type="submit" class="btn btn-primary" name="save_meeting_details_minutes_button" value="save_meeting_details" data-toggle="button">Save meeting details</button>
-				<button type="submit" class="btn btn-default" name="cancel_meeting_details_minutes_button" value="cancel_meeting_details" data-toggle="button">Discard changes</button>
-			</form>
-		</div>
-		</div>
-		</div>
+<div class="row">
+  <div class="col-md-7">
 
-	{% else %}
-
-	<div class="row">
-  	<div class="col-md-6">
-  	<div class="well">
-		<div class="panel panel-primary">
+  	  <div class="panel panel-primary">
 			
 		<table class="table">
-			<thead>
-				<tr>
-					<th>{{ meeting.description }} of {{ account.group_name }}</th>
-					<th></th>
-				</tr>
-			</thead>
-			<tbody> 
-				<tr>
-					<td><strong>Date</strong></td>
-					<td>{{ meeting.date }}</td>
-				</tr>
-				<tr>
-					<td><strong>Time</strong></td>
-					<td>**2:00pm**</td>
-				</tr>
-				<tr>
-					<td><strong>Location</strong></td>
-					<td>{{ meeting.location|linebreaks }}</td>
-				</tr>
-			</tbody>
+		  <thead>
+		    <tr>
+		      <th>{{ meeting.description }} of {{ account.group_name }}</th>
+		      <th></th>
+			</tr>
+		  </thead>
+		  <tbody> 
+			<tr>
+			  <td><strong>Date</strong></td>
+			  <td>{{ meeting.date }}</td>
+		    </tr>
+			<tr>
+			  <td><strong>Time</strong></td>
+			  <td>{{ meeting.start_time }}</td>
+			</tr>
+			<tr>
+			  <td><strong>Location</strong></td>
+			  <td>{{ meeting.location|linebreaks }}</td>
+			</tr>
+		  </tbody>
 		</table>
-	</div>
-		{% ifequal editable_section 'none' %}
-			<form action="" method="POST">
-				{% csrf_token %}
-				<button type="submit" class="btn btn-default" name="edit_meeting_details_minutes_button" value="edit_meeting_details" data-toggle="button">Edit meeting details</button>
-			</form>
-		{% endifequal %}
-	</div>
-	</div>
-	</div>
-	{% endifequal %}
+	  </div>
 
 
 
@@ -145,13 +103,13 @@
 {% endcomment %}
 
 
-{# MAIN ITEMS #}
+
+
+{# AGENDA ITEMS #}
 
 <h1><small>Agenda items</small></h1>
 
-	{% ifequal editable_section 'is_main_items' %}
 
-		<div class="well">
 			<form action="" method="POST">
 				{% csrf_token %}
 				{{ existing_data_formset.management_form }}
@@ -160,18 +118,24 @@
 				{% for item in existing_data_formset %}
 					<div class="panel panel-primary">
 						<div class="panel-heading">
-							Item&nbsp;{{ item.item_no.value }}.&nbsp;{{ item.heading.value }}
+							<strong>Item&nbsp;{{ item.item_no.value }}.&nbsp;{{ item.heading.value }}</strong>
+						  <div class="pull-right">
+						  	{{ item.time_limit.value }}&nbsp;minutes		
+						  </div>
+						
 						</div>
 						<div class="panel-body">
+								
 							<div class="form-group">
-								{{ item.background.label_tag }}{{ item.background|setclass:"form-control" }}
+								{{ item.background.label_tag }}
+						      <div class="well">
+								{{ item.background.value }}
+							  </div>
 							</div>
 							<div class="form-group">
 								{{ item.minute_notes.label_tag }}{{ item.minute_notes|setclass:"form-control" }}
 							</div>
-							<div class="form-group">								
-								{{ item.time_limit.label_tag }}{{ item.time_limit|setclass:"form-control" }}		
-							</div>								
+														
 								{{ item.id|setclass:"form-control" }}
 						    	{{ item.item_no|setclass:"form-control" }}
 						
@@ -198,24 +162,16 @@
 									{% ifequal task.item.value item.id.value %}
 										<div class="form-inline" role="form">
 											<div class="form-group">
-									   			<div class="col-sm-4">
 									   				{{ task.description|setclass:"form-control" }}
-									   			</div>
-											   	<div class="col-sm-4">
-											   		{{ task.participant|setclass:"form-control" }}
-									   			</div>
-									   			<div class="col-sm-4">
+									   				{{ task.participant|setclass:"form-control" }}
 									   				{{ task.deadline|setclass:"form-control" }}
-												</div>
-												<div>
 													{{ task.DELETE.label_tag }}{{ task.DELETE|setclass:"form-control"}}
-												</div>
 												{{ task.status|setclass:"form-control" }}
 												{{ task.id|setclass:"form-control" }}
 												{{ task.meeting|setclass:"form-control" }}
 												{{ task.owner|setclass:"form-control" }}
 												{{ task.item|setclass:"form-control" }}
-										</div>
+										    </div>
 										</div>
 									{% endifequal %}
 								{% endfor %}
@@ -226,78 +182,9 @@
 				{% endfor %}
 				<button type="submit" class="btn btn-primary" name="save_main_items_agenda_button" value="save_main_items" data-toggle="button">Save main items</button>
 			</form>
-		</div>
 
-	{% else %}
 
-		<div class="well">
-			{% for item in main_items %}
-				<div class="panel panel-primary">
-					<div class="panel-heading">
-						{{ item.heading }}
-					</div>
-					<div class="panel-body">
-						{{ item.minute_notes|linebreaks }}
-					</div>
-					
-					<table class="table">
-						<thead>
-							<tr>
-								<th>Decision/s</th>
-							</tr>
-						</thead>
-						<tbody> 
-							{% for decision in decision_items %}
-								{% ifequal decision.item_id item.id %}
-									<tr>
-										<td>{{ decision.description }}</td>
-							{% endifequal %}
-						{% endfor %}
-						</tbody>
-					</table>
-					<br>			
-					<table class="table">
-						<thead>
-							<tr>
-								<th>Task</th>
-								<th>Assigned to</th>
-								<th>Deadline</th>
-							</tr>
-						</thead>
-						<tbody> 
-							{% for task in task_items %}
-								{% ifequal task.item_id item.id %}
-									<tr>
-										<td>{{ task.description }}</td>
-										<td>{{ task.participant }}</td>
-										<td>{{ task.deadline }}</td>
-									</tr>
-								{% endifequal %}
-							{% endfor %}
-						</tbody>
-					</table>
-					
-				</div>
-			{% endfor %}
-			{% ifequal editable_section 'none' %}
-				<form action="" method="POST">
-					{% csrf_token %}
-					<button type="submit" class="btn btn-primary" name="edit_main_items_agenda_button" value="edit_main_items" data-toggle="button">Edit main items</button>
-				</form>
-			{% endifequal %}
-		</div>
-		
-	{% endifequal %}
-
-<div>
-	{% ifequal editable_section 'none' %}
-		<a href='#'}><button type="button" class="btn btn-primary" data-toggle="button">Format for distribution</button></a>
-	{% endifequal %}
+  </div>
 </div>
-
-<br><br>
-
-
-
 
 {% endblock %}
