--- a/docs/templates/minutes_edit_ajax_sidebar.html
+++ b/docs/templates/minutes_edit_ajax_sidebar.html
@@ -1,6 +1,6 @@
 {% load setclass %}
 
-<ul class="nav nav-sidebar sortable">
+<ul class="nav nav-sidebar">
   {% for item in items %}
     <li id="sidebar_{{ item.item_no}}">
       <a href="#id_{{ item.item_no}}-heading" class="sidebar-heading tltip"
