Set up user registration

--- a/access/templates/user_login.html
+++ b/access/templates/user_login.html
@@ -91,6 +91,8 @@
         <button class="btn btn-lg btn-primary btn-block" type="submit" name="login_button">Sign in</button>
       </form>
   	  <p class="text-center red">{{ error }}</p>
+  	  
+  	   <p class="text-center">Get an <a href="/register/">account</a>.</h4>
     </div> <!-- /container -->
 
 
