--- a/econvenor/templates/app_base.html
+++ b/econvenor/templates/app_base.html
@@ -69,7 +69,7 @@
 						<li class="dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Hi, {{ user }} <b class="caret"></b></a>
 							<ul class="dropdown-menu">
-								<li><a href={% url 'account-settings' %}>Account settings</a></li>
+								<li><a href={% url 'account' %}>Account settings</a></li>
 								<li class="divider"></li>
 								<li><a href={% url 'logout' %}><strong>Log out</strong></a></li>
 							</ul>
