--- a/authentication/templates/user_login.html
+++ b/authentication/templates/user_login.html
@@ -86,7 +86,7 @@
   
       <form class="form-signin" role="form" method="POST">
         {% csrf_token %}
-        <input type="text" class="form-control" id="id_username" name="username" placeholder="Username" required autofocus>
+        <input type="text" class="form-control" id="id_email" name="email" placeholder="Email" required autofocus>
         <input type="password" class="form-control" id="id_password" name="password" placeholder="Password" required>
         <button class="btn btn-lg btn-primary btn-block" type="submit" name="login_button">Sign in</button>
       </form>
