--- a/econvenor/commonstatic/css/landing.css
+++ b/econvenor/commonstatic/css/landing.css
@@ -140,7 +140,21 @@ body {
   border-color: #555555;
 }
 
+.btn-primary {
+  color: #ffffff;
+  background-color: #ff0066;
+  border-color: #ff0066;
+}
 
+.btn-primary:hover,
+.btn-primary:focus,
+.btn-primary:active,
+.btn-primary.active,
+.open .dropdown-toggle.btn-primary {
+  color: #ffffff;
+  background-color: #ff0066;
+  border-color: #ff0066;
+}
 /* JUMBOTRONS
 -------------------------------------------------- */
 
@@ -277,6 +291,15 @@ a:focus.email-link {
 
 .section3-right {
   padding-left: 70px;
+}
+
+
+/* ERROR TEXT
+-------------------------------------------------- */
+
+.errorlist {
+  color: #ff0066;
+  font-size: 0.9em;
 }
 
 
