Got tasks and participants working again

--- a/participants/templates/participant_edit.html
+++ b/participants/templates/participant_edit.html
@@ -12,26 +12,19 @@
 <div class="well"> 
       
 	<form action="" method="POST">
-		<div class="form-group">
-			{% csrf_token %}
-    	</div>
-    	
-    	{% for hidden in participant_form.hidden_fields %}
-   			<div class="form-group">
-   				{{ hidden }}
-   			</div>
-		{% endfor %}	
-
-    	{% for field in participant_form.visible_fields %}
+		{% csrf_token %}
+    
+    	{% for field in form %}
 			<div>
 				{{ field.label_tag }} {{ field|setclass:"form-control" }}
+				{{ field.errors }}
 			</div>
 			<br>
 		{% endfor %}
 		
-	<button type="submit" class="btn btn-primary" name="button" value="submit" data-toggle="button">Save changes</button>
-    <a href={% url 'participant-view' participant_id %}><button type="button" class="btn btn-default" data-toggle="button">Cancel</button></a>
-    <button type="submit" class="btn btn-danger" name="button" value="delete-participant" data-toggle="button">Delete participant</button>
+	<button type="submit" class="btn btn-primary" name="button" value="save">Save changes</button>
+    <a href={% url 'participant-view' participant_id %}><button type="button" class="btn btn-default">Cancel</button></a>
+    <button type="submit" class="btn btn-danger" name="button" value="delete">Delete participant</button>
 	</form>
 
 </div>
