--- a/participants/templates/participant_add.html
+++ b/participants/templates/participant_add.html
@@ -12,25 +12,19 @@
 <div class="well"> 
       
 	<form action="" method="POST">
-		<div class="form-group">
-			{% csrf_token %}
-    	</div>
+	{% csrf_token %}
     	
-    	{% for hidden in participant_form.hidden_fields %}
-   			<div class="form-group">
-   				{{ hidden }}
-   			</div>
-		{% endfor %}	
-
-    	{% for field in participant_form.visible_fields %}
-			<div>
+    	{% for field in form %}
+		    <div class="form-group">
 				{{ field.label_tag }} {{ field|setclass:"form-control" }}
+				{{ field.errors }}
 			</div>
-			<br>
 		{% endfor %}
 
-     	 	<button type="submit" class="btn btn-primary" data-toggle="button">Add participant</button>
-     	 	<a href={% url 'participant-list' %}><button type="button" class="btn btn-default" data-toggle="button">Cancel</button></a>
+     	 <button type="submit" class="btn btn-primary" data-toggle="button">
+     	     Add participant</button>
+     	 <a href={% url 'participant-list' %}><button type="button" 
+     	     class="btn btn-default" data-toggle="button">Cancel</button></a>
 	
 	</form>
 
