--- a/docs/templates/agenda_list.html
+++ b/docs/templates/agenda_list.html
@@ -32,7 +32,7 @@
 	</table>
 </div>
 
-<a href={% url 'agenda-add' %}><button type="button" class="btn btn-primary" data-toggle="button">Add agenda</button></a>
+<a href={% url 'meeting-add' %}><button type="button" class="btn btn-primary" data-toggle="button">Add agenda</button></a>
 	
 		
 {% endblock %}
