--- a/docs/templates/agenda_edit_ajax_sidebar.html
+++ b/docs/templates/agenda_edit_ajax_sidebar.html
@@ -3,11 +3,11 @@
 <ul class="nav nav-sidebar sortable">
   {% for item in items %}
     <li id="sidebar_{{ item.item_no}}">
-      <a href="#id_{{ item.item_no}}-heading" class="sidebar-heading tltip"
+      <a href="#id_{{ item.item_no}}-title" class="sidebar-heading tltip"
          data-toggle="tooltip" title="Scroll to this item">
         <div>
           <span id="sidebar_heading_{{ item.item_no}}">{{ item.item_no}}.
-                &nbsp;{{ item.heading }}
+                &nbsp;{{ item.title }}
           </span>
         </div>
       </a>
