Got minutes largely working

--- a/docs/templates/agenda_edit.html
+++ b/docs/templates/agenda_edit.html
@@ -67,7 +67,7 @@
 	  	  <table class="table">
 	        <thead>
 			  <tr>
-			    <th>{{ meeting.description }} of {{ account.group_name }}</th>
+			    <th>{{ meeting.meeting_type }} of {{ group_name }}</th>
 			    <th></th>
 			  </tr>
 		    </thead>
