--- a/docs/templates/minutes_edit_ajax_items.html
+++ b/docs/templates/minutes_edit_ajax_items.html
@@ -24,9 +24,6 @@
           <div class="well well-sm">
             To be explained by&nbsp;{{ item.explainer.value }}
             <br/>
-            <h1> Print: {{ item.id.value }} </h1>
-            <h1> {{ item.id }} </h1>
-            <h1> {{ item.id.label_tag }} </h1>
           </div>
         </div>
         
@@ -52,26 +49,18 @@
         <p><strong>Decisions:</strong></p>
         
         <div class="panel panel-default">
-          {% for decision in decisions %}
-            {% ifequal decision.item.value item.id.value %}
+          {% for decision in decision_formlist %}
+            {% ifequal decision.instance.item.id item.instance.id %}
               <div class="form-group">
+                {{ decision.label_tag }}
                 {{ decision.description|setclass:"form-control" }}
-                {{ decision.DELETE.label_tag }}
-                {{ decision.DELETE|setclass:"form-control"}}
-                {{ decision.id|setclass:"form-control" }}
-                {{ decision.meeting|setclass:"form-control" }}
-                {{ decision.item|setclass:"form-control" }}
-                {{ decision.owner|setclass:"form-control" }}
-                
               </div>
             {% endifequal %}
           {% endfor %}
 
-          <button type="submit" class="btn btn-default" 
-                  name="add_decision_button" 
-                  value="add_decision_button_{{ item.id.value }}" 
-                  data-toggle="button">
-            Add a decision to this item
+          <button id="add_decision_button_{{ item.instance.id }}"
+            class="btn btn-default ajax-button" type="button">
+              Add a decision to this item
           </button>
           
         </div>
@@ -80,29 +69,20 @@
         <p><strong>Tasks:</strong></p>
         
         <div class="panel panel-default">
-          {% for task in tasks %}
-            {% ifequal task.item.value item.id.value %}
+          {% for task in task_formlist %}
+            {% ifequal task.instance.item.id item.instance.id %}
               <div class="form-inline" role="form">
                 <div class="form-group">
                   {{ task.description|setclass:"form-control" }}
                   {{ task.participant|setclass:"form-control" }}
                   {{ task.deadline|setclass:"form-control" }}
-                  {{ task.DELETE.label_tag }}
-                  {{ task.DELETE|setclass:"form-control"}}
-                  {{ task.status|setclass:"form-control" }}
-                  {{ task.id|setclass:"form-control" }}
-                  {{ task.meeting|setclass:"form-control" }}
-                  {{ task.owner|setclass:"form-control" }}
-                  {{ task.item|setclass:"form-control" }}
                 </div>
               </div>
             {% endifequal %}
           {% endfor %}
 
-          <button type="submit" class="btn btn-default"
-                  name="add_task_button" 
-                  value="add_task_button_{{ task.id.value }}"
-                  data-toggle="button">
+          <button id="add_task_button_{{ item.instance.id }}"
+            class="btn btn-default ajax-button" type="button">
             Add a task to this item
           </button>
         </div>						
