Cleaned and refactored agenda views

--- a/docs/templates/agenda_edit.html
+++ b/docs/templates/agenda_edit.html
@@ -22,7 +22,7 @@
     </ul>
     <ul class="nav nav-sidebar">
       <li><button type="button" class="btn btn-primary ajax-button" id="save_button">Save all</button></li>
-      <li><button type="button" class="btn btn-primary ajax-button" id="add_button">Add item</button></li>
+      <li><button type="button" class="btn btn-primary ajax-button" id="add_item">Add item</button></li>
       <li><button type="button" class="btn btn-primary navigate-button" goto="{% url 'minutes-edit' meeting_id %}" id="minutes_button">Create minutes</button></li>
       <li><button type="button" class="btn btn-primary navigate-button" goto="{% url 'agenda-distribute' meeting_id %}" id="distribute_button">Distribute this agenda</button></li>
       </ul>
