--- a/docs/templates/agenda_edit_ajax_items.html
+++ b/docs/templates/agenda_edit_ajax_items.html
@@ -25,7 +25,7 @@
         {{ item.background.errors }}
       <button type="button" title="Delete item" 
         class="btn btn-default btn-xs ajax-button tltip"
-        id="delete_button_{{ item.item_no.value}}" data-toggle="tooltip" >
+        id="delete_item_{{ item.item_no.value}}" data-toggle="tooltip" >
         <span class="glyphicon glyphicon-remove">Delete</span>
       </button>
     </div>
