--- a/docs/templates/minutes_list.html
+++ b/docs/templates/minutes_list.html
@@ -19,9 +19,9 @@
 		<tbody> 
 			{% for minute in minutes %}
 				<tr id={{ minute.id }} onclick="document.location='{% url 'minutes-edit' minute.id %}';">
-					<td>{{ minute.id }}</td>
 					<td>{{ minute.meeting_no }}</td>
 					<td>{{ minute.date_actual }}</td>
+					<td>{{ minute.meeting_type }}</td>
 				</tr>
 			{% empty %}
 				<tr>
